# CLI-Anything-RS

./: .gitignore  AGENTS.md  Cargo.toml  DIRECTORY_STRUCTURE.md  LICENSE  README.md
.github/workflows/: ci.yml
crates/cli-anything-cli/: Cargo.toml
crates/cli-anything-cli/src/: main.rs
crates/cli-anything-core/: Cargo.toml
crates/cli-anything-core/src/: lib.rs
crates/cli-anything-generator/: Cargo.toml
crates/cli-anything-generator/src/: lib.rs
crates/cli-anything-integrations/: Cargo.toml
crates/cli-anything-integrations/src/: lib.rs
crates/cli-anything-manifest/: Cargo.toml
crates/cli-anything-manifest/src/: lib.rs
crates/cli-anything-project/: Cargo.toml
crates/cli-anything-project/src/: backend.rs  lib.rs
crates/cli-anything-repl/: Cargo.toml
crates/cli-anything-repl/src/: lib.rs
crates/cli-anything-skillgen/: Cargo.toml
crates/cli-anything-skillgen/examples/: regen_skills.rs
crates/cli-anything-skillgen/src/: lib.rs
fixtures/: README.md
fixtures/manifests/: blender.toml
templates/: README.md
templates/package/: Cargo.toml.template
templates/package/src/: main.rs.template
templates/skill/: README.md  SKILL.md.template
