[workspace]
members = [
    "crates/cli-anything-cli",
    "crates/cli-anything-core",
    "crates/cli-anything-repl",
    "crates/cli-anything-skillgen",
    "packages/*",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["cli-anything contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
