[package]
name = "cli-anything-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
cli-anything-core = { path = "../cli-anything-core" }
cli-anything-repl = { path = "../cli-anything-repl" }
cli-anything-skillgen = { path = "../cli-anything-skillgen" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
