[package]
name = "cli-anything-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
cli-anything-manifest = { path = "../cli-anything-manifest" }
cli-anything-skillgen = { path = "../cli-anything-skillgen" }
toml = { workspace = true }
