[package]
name = "cli-anything-project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
cli-anything-manifest = { path = "../cli-anything-manifest" }
serde = { workspace = true }
serde_json = { workspace = true }
